--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,15 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="../images/favicon-32x32.png"
     />
-    <link href="/dist/output.css" rel="stylesheet" />
-    <title>Frontend Mentor | Tip calculator app</title>
+    <link href="../dist/output.css" rel="stylesheet" />
+    <title>Tip calculator app</title>
   </head>
-  <body>
-    <h1 class="text-3xl font-bold underline">Hello world!</h1>
+  <body class="">
+    <header class="flex justify-center mt-[50px]">
+      <img src="../images/logo.svg" alt="" />
+    </header>
+    <section class=""></section>
   </body>
 </html>
