--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,86 @@
     <header class="flex justify-center mt-[50px]">
       <img src="../images/logo.svg" alt="" />
     </header>
-    <section class=""></section>
+    <section
+      class="bg-white p-8 rounded-3xl shadow-[0_32px_43px_rgba(79, 166, 175, 0.200735)] mt-[40px] space-y-8"
+    >
+      <div class="flex flex-col">
+        <label for="bill-input" class="text-dark-cyan">Bill</label>
+        <div class="relative mt-[6px]">
+          <div
+            class="absolute inset-y-0 left-0 flex items-center pointer-events-none pl-4"
+          >
+            <img src="/images/icon-dollar.svg" alt="" />
+          </div>
+          <input
+            type="text"
+            class="bg-light-cyan py-1 w-full border-none border focus:outline-none text-right text-very-dark-cyan text-2xl pr-4 pl-8"
+            placeholder=""
+          />
+        </div>
+      </div>
+      <div class="">
+        <label for="" class="text-dark-cyan">Select Tip %</label>
+        <div class="grid grid-cols-2 gap-4 mt-4">
+          <div class="text-center bg-very-dark-cyan rounded py-[6px]">
+            <h4 class="text-white text-2xl">5%</h4>
+          </div>
+          <div class="text-center bg-very-dark-cyan rounded py-[6px]">
+            <h4 class="text-white text-2xl">10%</h4>
+          </div>
+          <div class="text-center bg-strong-cyan rounded py-[6px]">
+            <h4 class="text-very-dark-cyan text-2xl">15%</h4>
+          </div>
+          <div class="text-center bg-very-dark-cyan rounded py-[6px]">
+            <h4 class="text-white text-2xl">25%</h4>
+          </div>
+          <div class="text-center bg-very-dark-cyan rounded py-[6px]">
+            <h4 class="text-white text-2xl">50%</h4>
+          </div>
+          <input
+            type="text"
+            name=""
+            placeholder="Custom"
+            class="text-right text-2xl text-very-dark-cyan pr-4"
+          />
+        </div>
+      </div>
+      <div class="flex flex-col">
+        <label for="bill-input" class="text-dark-cyan">Number of People</label>
+        <div class="relative mt-[6px]">
+          <div
+            class="absolute inset-y-0 left-0 flex items-center pointer-events-none pl-4"
+          >
+            <img src="/images/icon-person.svg" alt="" />
+          </div>
+          <input
+            type="text"
+            class="bg-light-cyan py-1 w-full border-none border focus:outline-none text-right text-very-dark-cyan text-2xl pr-4 pl-8"
+            placeholder=""
+          />
+        </div>
+      </div>
+      <div class="bg-very-dark-cyan px-6 pt-8 pb-6 rounded-3xl space-y-[26px]">
+        <div class="flex justify-between">
+          <div>
+            <p class="text-white">Tip Amount</p>
+            <span class="text-[13px] text-grayish-cyan">/ person</span>
+          </div>
+          <h4 class="text-[32px] text-strong-cyan">$4.27</h4>
+        </div>
+        <div class="flex justify-between">
+          <div>
+            <p class="text-white">Total</p>
+            <span class="text-[13px] text-grayish-cyan">/ person</span>
+          </div>
+          <h4 class="text-[32px] text-strong-cyan">$32.79</h4>
+        </div>
+        <button
+          class="uppercase bg-strong-cyan w-full text-xl py-[9px] rounded text-very-dark-cyan"
+        >
+          RESET
+        </button>
+      </div>
+    </section>
   </body>
 </html>
