--- a/src/index.html
+++ b/src/index.html
@@ -15,82 +15,100 @@
     <title>Tip calculator app</title>
   </head>
   <body class="">
-    <header class="flex justify-center mt-[50px]">
+    <header class="flex justify-center mt-[50px] lg:mt-[163px]">
       <img src="../images/logo.svg" alt="" />
     </header>
     <section
-      class="bg-white p-8 rounded-3xl shadow-[0_32px_43px_rgba(79, 166, 175, 0.200735)] mt-[40px] space-y-8"
+      class="bg-white p-8 rounded-3xl shadow-[0_32px_43px_rgba(79, 166, 175, 0.200735)] mt-[40px] lg:max-w-[920px] mx-auto lg:flex lg:gap-[48px] lg:mt-[87px]"
     >
-      <div class="flex flex-col">
-        <label for="bill-input" class="text-dark-cyan">Bill</label>
-        <div class="relative mt-[6px]">
-          <div
-            class="absolute inset-y-0 left-0 flex items-center pointer-events-none pl-4"
+      <div class="lg:w-1/2 lg:space-y-[40px] space-y-[32px]">
+        <div class="flex flex-col">
+          <label for="bill-input" class="text-dark-cyan">Bill</label>
+          <div class="relative mt-[6px]">
+            <div
+              class="absolute inset-y-0 left-0 flex items-center pointer-events-none pl-4"
+            >
+              <img src="/images/icon-dollar.svg" alt="" />
+            </div>
+            <input
+              type="text"
+              class="bg-light-cyan py-1 w-full border-none border focus:outline-none text-right text-very-dark-cyan text-2xl pr-4 pl-8 rounded"
+              placeholder=""
+            />
+          </div>
+        </div>
+        <div class="">
+          <label for="" class="text-dark-cyan">Select Tip %</label>
+          <div class="grid grid-cols-2 gap-4 mt-4 lg:grid-cols-3">
+            <div
+              class="text-center bg-very-dark-cyan rounded py-[6px] cursor-pointer"
+            >
+              <h4 class="text-white text-2xl">5%</h4>
+            </div>
+            <div
+              class="text-center bg-very-dark-cyan rounded py-[6px] cursor-pointer"
+            >
+              <h4 class="text-white text-2xl">10%</h4>
+            </div>
+            <div
+              class="text-center bg-strong-cyan rounded py-[6px] cursor-pointer"
+            >
+              <h4 class="text-very-dark-cyan text-2xl">15%</h4>
+            </div>
+            <div
+              class="text-center bg-very-dark-cyan rounded py-[6px] cursor-pointer"
+            >
+              <h4 class="text-white text-2xl">25%</h4>
+            </div>
+            <div
+              class="text-center bg-very-dark-cyan rounded py-[6px] cursor-pointer"
+            >
+              <h4 class="text-white text-2xl">50%</h4>
+            </div>
+            <input
+              type="text"
+              name=""
+              placeholder="Custom"
+              class="text-right text-2xl text-very-dark-cyan pr-4 rounded"
+            />
+          </div>
+        </div>
+        <div class="flex flex-col">
+          <label for="bill-input" class="text-dark-cyan"
+            >Number of People</label
           >
-            <img src="/images/icon-dollar.svg" alt="" />
+          <div class="relative mt-[6px]">
+            <div
+              class="absolute inset-y-0 left-0 flex items-center pointer-events-none pl-4"
+            >
+              <img src="/images/icon-person.svg" alt="" />
+            </div>
+            <input
+              type="text"
+              class="bg-light-cyan py-1 w-full border-none border focus:outline-none text-right text-very-dark-cyan text-2xl pr-4 pl-8 rounded"
+              placeholder=""
+            />
           </div>
-          <input
-            type="text"
-            class="bg-light-cyan py-1 w-full border-none border focus:outline-none text-right text-very-dark-cyan text-2xl pr-4 pl-8"
-            placeholder=""
-          />
         </div>
       </div>
-      <div class="">
-        <label for="" class="text-dark-cyan">Select Tip %</label>
-        <div class="grid grid-cols-2 gap-4 mt-4">
-          <div class="text-center bg-very-dark-cyan rounded py-[6px]">
-            <h4 class="text-white text-2xl">5%</h4>
+      <div
+        class="bg-very-dark-cyan px-6 pt-8 pb-6 rounded-3xl lg:w-1/2 mt-[32px] lg:mt-0"
+      >
+        <div class="lg:mb-[120px] space-y-[26px] mb-[32px] lg:space-y-[52px]">
+          <div class="flex justify-between">
+            <div>
+              <p class="text-white">Tip Amount</p>
+              <span class="text-[13px] text-grayish-cyan">/ person</span>
+            </div>
+            <h4 class="text-[32px] text-strong-cyan lg:text-5xl">$4.27</h4>
           </div>
-          <div class="text-center bg-very-dark-cyan rounded py-[6px]">
-            <h4 class="text-white text-2xl">10%</h4>
+          <div class="flex justify-between">
+            <div>
+              <p class="text-white">Total</p>
+              <span class="text-[13px] text-grayish-cyan">/ person</span>
+            </div>
+            <h4 class="text-[32px] text-strong-cyan lg:text-5xl">$32.79</h4>
           </div>
-          <div class="text-center bg-strong-cyan rounded py-[6px]">
-            <h4 class="text-very-dark-cyan text-2xl">15%</h4>
-          </div>
-          <div class="text-center bg-very-dark-cyan rounded py-[6px]">
-            <h4 class="text-white text-2xl">25%</h4>
-          </div>
-          <div class="text-center bg-very-dark-cyan rounded py-[6px]">
-            <h4 class="text-white text-2xl">50%</h4>
-          </div>
-          <input
-            type="text"
-            name=""
-            placeholder="Custom"
-            class="text-right text-2xl text-very-dark-cyan pr-4"
-          />
-        </div>
-      </div>
-      <div class="flex flex-col">
-        <label for="bill-input" class="text-dark-cyan">Number of People</label>
-        <div class="relative mt-[6px]">
-          <div
-            class="absolute inset-y-0 left-0 flex items-center pointer-events-none pl-4"
-          >
-            <img src="/images/icon-person.svg" alt="" />
-          </div>
-          <input
-            type="text"
-            class="bg-light-cyan py-1 w-full border-none border focus:outline-none text-right text-very-dark-cyan text-2xl pr-4 pl-8"
-            placeholder=""
-          />
-        </div>
-      </div>
-      <div class="bg-very-dark-cyan px-6 pt-8 pb-6 rounded-3xl space-y-[26px]">
-        <div class="flex justify-between">
-          <div>
-            <p class="text-white">Tip Amount</p>
-            <span class="text-[13px] text-grayish-cyan">/ person</span>
-          </div>
-          <h4 class="text-[32px] text-strong-cyan">$4.27</h4>
-        </div>
-        <div class="flex justify-between">
-          <div>
-            <p class="text-white">Total</p>
-            <span class="text-[13px] text-grayish-cyan">/ person</span>
-          </div>
-          <h4 class="text-[32px] text-strong-cyan">$32.79</h4>
         </div>
         <button
           class="uppercase bg-strong-cyan w-full text-xl py-[9px] rounded text-very-dark-cyan"
