--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
             <div
               class="absolute inset-y-0 left-0 flex items-center pointer-events-none pl-4"
             >
-              <img src="/images/icon-dollar.svg" alt="" />
+              <img src="../images/icon-dollar.svg" alt="" />
             </div>
             <input
               type="text"
@@ -92,7 +92,7 @@
             <div
               class="absolute inset-y-0 left-0 flex items-center pointer-events-none pl-4"
             >
-              <img src="/images/icon-person.svg" alt="" />
+              <img src="../images/icon-person.svg" alt="" />
             </div>
             <input
               type="text"
