add placeholder for inputs

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
             <input
               type="text"
               class="bill bg-light-cyan py-1 w-full border-none border focus:outline-strong-cyan text-right text-very-dark-cyan text-2xl pr-4 pl-8 rounded cursor-pointer"
-              placeholder=""
+              placeholder="0"
             />
           </div>
         </div>
@@ -97,7 +97,7 @@
             <input
               type="text"
               class="people bg-light-cyan py-1 w-full focus:outline-strong-cyan text-right text-very-dark-cyan text-2xl pr-4 pl-8 rounded cursor-pointer"
-              placeholder=""
+              placeholder="0"
             />
           </div>
         </div>
